update discovery conformancegroups information
Signed-off-by: Martin Homuth <martin@martinhomuth.de>

--- a/doc/profiles.org
+++ b/doc/profiles.org
@@ -29,39 +29,39 @@
 ** Discovery Services
    ConformanceUnits which focus on Server Endpoint Discovery.
 
-   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------+----------------------|
-   | Title                                                 | Category | Description                                                                                                                                                                                                                                                                                                                                                                     | Location                                                                                         | Status               |
-   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------+----------------------|
-   | Discovery Get Endpoints                               | Server   | Support the GetEndpoints Service to obtain all Endpoints of the Server. This includes filtering based on Profiles.                                                                                                                                                                                                                                                              | [[https://github.com/open62541/open62541/blob/0.2/src/server/ua_services_discovery.c#L43][link]] | no profile filtering |
-   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------+----------------------|
-   | Discovery Find Servers Self                           | Server   | Support the FindServers Service only for itself.                                                                                                                                                                                                                                                                                                                                | n/a                                                                                              | n/a                  |
-   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------+----------------------|
-   | Discovery Register                                    | Server   | Call the RegisterServer Service to register itself (OPC UA Server) with an external Discovery Service via a secure channel with a SecurityMode other than "None".                                                                                                                                                                                                               | n/a                                                                                              | n/a                  |
-   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------+----------------------|
-   | Discovery Register2                                   | Server   | Call the RegisterServer2 Service to register with an external Discovery Service via a Secure Channel with a SecurityMode other than "None". This includes passing a list of short capability identifiers. The use of these identifiers is specified in Part 12; the complete list can be found in http://www.opcfoundation.org/UA/schemas/1.03/ServerCapabilityIdentifiers.csv. | n/a                                                                                              | n/a                  |
-   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------+----------------------|
-   | Discovery Configuration                               | Server   | Allow configuration of the Discovery Server URL where the Server will register itself. Allow complete disabling of registration with a Discovery Server.                                                                                                                                                                                                                        | n/a                                                                                              | n/a                  |
-   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------+----------------------|
-   | Discovery Server Announcment using mDNS               | Server   | Provide mDNS functionality to announce a Server with its capabilities. The capability identifiers and the use of mDNS records for the purpose of OPC UA Discovery is specified in Part 12.                                                                                                                                                                                      | n/a                                                                                              | n/a                  |
-   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------+----------------------|
-   | Discovery Client Find Servers Basic                   | Client   | Uses the FindServers Service to obtain all Servers installed on a given platform.                                                                                                                                                                                                                                                                                               | n/a                                                                                              | n/a                  |
-   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------+----------------------|
-   | Discovery Client Find Servers with URI                | Client   | Use FindServers Service to obtain URLs for specific Server URIs.                                                                                                                                                                                                                                                                                                                | n/a                                                                                              | n/a                  |
-   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------+----------------------|
-   | Discovery Client Find Servers Dynamic                 | Client   | Detect new Servers after an initial FindServers Service Call                                                                                                                                                                                                                                                                                                                    | n/a                                                                                              | n/a                  |
-   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------+----------------------|
-   | Discovery Client Find Servers on Network using LDS-ME | Client   | Use FindServersOnNetwork Service to obtain URLs for specific Server URIs. Note that this Service is available via the Local Discovery Server with multicast extension (LDS-ME).                                                                                                                                                                                                 | n/a                                                                                              | n/a                  |
-   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------+----------------------|
-   | Discovery Client Find Servers on Network using mDNS   | Client   | Use mDNS based Service Discovery to locate Servers on the same multicast network. The contents of mDNS records for OPC UA Discovery are described in Part 12.                                                                                                                                                                                                                   | n/a                                                                                              | n/a                  |
-   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------+----------------------|
-   | Discovery Client Find Servers on Network              | Client   | Support one of the options to locate Servers on the network                                                                                                                                                                                                                                                                                                                     | n/a                                                                                              | n/a                  |
-   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------+----------------------|
-   | Discovery Client Find Servers in GDS                  | Client   | Use the QueryServers Method on the GDS Directory Object to locate Servers that meet filter criteria specified in the request. This Method is specified in Part 12.                                                                                                                                                                                                              | n/a                                                                                              | n/a                  |
-   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------+----------------------|
-   | Discovery Client Get Endpoints Dynamic                | Client   | Detect changes to the Endpoints after an initial GetEndpoints Service call.                                                                                                                                                                                                                                                                                                     | n/a                                                                                              | n/a                  |
-   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------+----------------------|
-   | Discovery Client Configure Endpoint                   | Client   | Allow specification of an Endpoint without going through the Discovery Service Set.                                                                                                                                                                                                                                                                                             | n/a                                                                                              | n/a                  |
-   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------+----------------------|
+   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------------------------------------------------------------|
+   | Title                                                 | Category | Description                                                                                                                                                                                                                                                                                                                                                                     | Location | Status                                                       |
+   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------------------------------------------------------------|
+   | Discovery Get Endpoints                               | Server   | Support the GetEndpoints Service to obtain all Endpoints of the Server. This includes filtering based on Profiles.                                                                                                                                                                                                                                                              | [[https://github.com/open62541/open62541/blob/0.2/src/server/ua_services_discovery.c#L43][link]]     | no profile filtering                                         |
+   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------------------------------------------------------------|
+   | Discovery Find Servers Self                           | Server   | Support the FindServers Service only for itself.                                                                                                                                                                                                                                                                                                                                | [[https://github.com/open62541/open62541/blob/0.2/src/server/ua_services_discovery.c#L5][link]]     | not possible due to missing session from server              |
+   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------------------------------------------------------------|
+   | Discovery Register                                    | Server   | Call the RegisterServer Service to register itself (OPC UA Server) with an external Discovery Service via a secure channel with a SecurityMode other than "None".                                                                                                                                                                                                               | [[https://github.com/open62541/open62541/blob/0.2/src/server/ua_services.h#L51][link]]     | not implemented                                              |
+   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------------------------------------------------------------|
+   | Discovery Register2                                   | Server   | Call the RegisterServer2 Service to register with an external Discovery Service via a Secure Channel with a SecurityMode other than "None". This includes passing a list of short capability identifiers. The use of these identifiers is specified in Part 12; the complete list can be found in http://www.opcfoundation.org/UA/schemas/1.03/ServerCapabilityIdentifiers.csv. | [[https://github.com/open62541/open62541/blob/0.2/src/server/ua_services.h#L51][link]]     | not implemented                                              |
+   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------------------------------------------------------------|
+   | Discovery Configuration                               | Server   | Allow configuration of the Discovery Server URL where the Server will register itself. Allow complete disabling of registration with a Discovery Server.                                                                                                                                                                                                                        | [[https://github.com/open62541/open62541/blob/0.2/src/server/ua_services.h#L51][link]]     | not implemented                                              |
+   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------------------------------------------------------------|
+   | Discovery Server Announcment using mDNS               | Server   | Provide mDNS functionality to announce a Server with its capabilities. The capability identifiers and the use of mDNS records for the purpose of OPC UA Discovery is specified in Part 12.                                                                                                                                                                                      | n/a      | not implemented                                              |
+   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------------------------------------------------------------|
+   | Discovery Client Find Servers Basic                   | Client   | Uses the FindServers Service to obtain all Servers installed on a given platform.                                                                                                                                                                                                                                                                                               | [[https://github.com/open62541/open62541/blob/0.2/src/server/ua_services.h#L41][link]]     | if specification means endpoints with servers, it is working |
+   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------------------------------------------------------------|
+   | Discovery Client Find Servers with URI                | Client   | Use FindServers Service to obtain URLs for specific Server URIs.                                                                                                                                                                                                                                                                                                                | [[https://github.com/open62541/open62541/blob/0.2/src/server/ua_services.h#L41][link]]     | not implemented                                              |
+   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------------------------------------------------------------|
+   | Discovery Client Find Servers Dynamic                 | Client   | Detect new Servers after an initial FindServers Service Call                                                                                                                                                                                                                                                                                                                    | [[https://github.com/open62541/open62541/blob/0.2/src/server/ua_services.h#L41][link]]     | should work as the first call                                |
+   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------------------------------------------------------------|
+   | Discovery Client Find Servers on Network using LDS-ME | Client   | Use FindServersOnNetwork Service to obtain URLs for specific Server URIs. Note that this Service is available via the Local Discovery Server with multicast extension (LDS-ME).                                                                                                                                                                                                 | [[https://github.com/open62541/open62541/blob/0.2/src/server/ua_services.h#L41][link]]     | not implemented                                              |
+   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------------------------------------------------------------|
+   | Discovery Client Find Servers on Network using mDNS   | Client   | Use mDNS based Service Discovery to locate Servers on the same multicast network. The contents of mDNS records for OPC UA Discovery are described in Part 12.                                                                                                                                                                                                                   | [[https://github.com/open62541/open62541/blob/0.2/src/server/ua_services.h#L41][link]]     | not implemented                                              |
+   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------------------------------------------------------------|
+   | Discovery Client Find Servers on Network              | Client   | Support one of the options to locate Servers on the network                                                                                                                                                                                                                                                                                                                     | [[https://github.com/open62541/open62541/blob/0.2/src/server/ua_services.h#L41][link]]     | see above                                     |
+   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------------------------------------------------------------|
+   | Discovery Client Find Servers in GDS                  | Client   | Use the QueryServers Method on the GDS Directory Object to locate Servers that meet filter criteria specified in the request. This Method is specified in Part 12.                                                                                                                                                                                                              | n/a      | not implemented                                              |
+   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------------------------------------------------------------|
+   | Discovery Client Get Endpoints Dynamic                | Client   | Detect changes to the Endpoints after an initial GetEndpoints Service call.                                                                                                                                                                                                                                                                                                     | [[https://github.com/open62541/open62541/blob/0.2/src/server/ua_services.h#L41][link]]     | only by examining the whole new list of endpoints            |
+   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------------------------------------------------------------|
+   | Discovery Client Configure Endpoint                   | Client   | Allow specification of an Endpoint without going through the Discovery Service Set.                                                                                                                                                                                                                                                                                             | [[https://github.com/open62541/open62541/blob/0.2/src/client/ua_client.c#L648][link]]    | flyby configuration, no separate handler                     |
+   |-------------------------------------------------------+----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------+--------------------------------------------------------------|
 
 ** Historical Access
    Access to archived data of node Attribute values or Events.
